--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -25,7 +25,7 @@
     "- **Pertanyaan/tujuan analisis**:\n",
     "    1.  **Analisis Bisnis & Pasar**: Sejauh mana kualitas performa tim (seperti *Winning Rate* dan *Offensive Ranking*) mempengaruhi loyalitas penggemar dan penjualan tiket? Apakah tim yang bermain buruk selalu ditinggalkan penontonnya?\n",
     "    2.  **Analisis Strategi Juara**: Apa profil statistik yang membedakan seorang Juara Superbowl dengan tim rata-rata? Apakah serangan (*Offense*) lebih krusial daripada pertahanan (*Defense*) dalam meraih gelar juara?\n",
-    "    3.  **Analisis Faktor Eksternal & Mitos**: Bagaimana faktor di luar kendali pelatih—seperti cuaca (bulan pertandingan), jadwal tayang (*Primetime*), dan jumlah penonton di stadion—mempengaruhi hasil akhir skor pertandingan?\n",
+    "    3.  **Analisis Faktor Eksternal & Dugaan**: Bagaimana faktor di luar kendali pelatih seperti cuaca, jadwal tayang, dan jumlah penonton di stadion mempengaruhi hasil akhir skor pertandingan?\n",
     "\n",
     "    **Tujuan:**\n",
     "    - Mengukur dampak ekonomi dari performa tim terhadap *weekly attendance*.\n",
@@ -6512,7 +6512,7 @@
    "source": [
     "#### iii. Interpretasi Box Plot Juara dan Non-Juara\n",
     "1. **Indikator Terkuat**: Kotak oranye (Juara) berada di atas kotak hijau (Non-Juara) dengan overlap yang sedikit.\n",
-    "    - Arti: Juara Superbowl biasanya tim yang mendominasi lawan secara metriks keseluruhan. SPS rata-rata mereka **+6.0** dan margin menang di atas **\n",
+    "    - Arti: Juara Superbowl biasanya tim yang mendominasi lawan secara metriks keseluruhan. SPS rata-rata mereka **+6.0**.\n",
     "\n",
     "2. **Keseimbangan Rank**\n",
     "    - Arti: Keduanya memiliki median positif dan posisinya hampir sama. Namun **rank serangan** lebih tinggi sedikit daripada **rank pertahanan**. Ada indikasi bahwa serangan yang lebih kuat sifatnya lebih krusial dibanding pertahanan. Tapi tetap keduanya harus berkesinambungan."
