--- a/notebooks/final-project.ipynb
+++ b/notebooks/final-project.ipynb
@@ -13,7 +13,7 @@
    "id": "92e2f1b7",
    "metadata": {},
    "source": [
-    "## A. Pendahulua\n",
+    "## A. Pendahuluan\n",
     "- **Deskripsi dataset**: 'NFL Stadium Attendance', sebuah pak dataset(terdiri dari tiga sub dataset) yang mencatat *Pro Football Reference team standings*. Ada **tiga** buah sub dataset, yaitu:\n",
     "    1. `attendance.csv` yang berisi kehadiran tim secara mingguan,\n",
     "    2. `standings.csv` yang berisi hasil komputasi pertandingan tim, dan\n",
